// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders correctly with caption 1`] = `
<div
  className="titleContainer"
>
  <div
    className="typography secondary start singleLineEllipsis text text2Normal title"
    data-testid="menu-title"
  >
    <label
      className="titleCaption titleCaptionBottom"
      data-testid="menu-title-caption"
    >
      my title
    </label>
  </div>
  
</div>
`;

exports[`renders correctly with custom class name 1`] = `
<div
  className="titleContainer dummy-class-name"
>
  <div
    className="typography secondary start singleLineEllipsis text text2Normal title"
    data-testid="menu-title"
  />
  
</div>
`;

exports[`renders correctly with empty props 1`] = `
<div
  className="titleContainer"
>
  <div
    className="typography secondary start singleLineEllipsis text text2Normal title"
    data-testid="menu-title"
  />
  
</div>
`;
